# scraping-dados-abertos-cnpj-receita-federal

./: .gitignore  explore.py  gold.py  pyproject.toml  script.py  transform.py
