[project]
name = "scraping-receita-federal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.3.2",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "polars>=1.32.2",
    "pyarrow>=21.0.0",
    "pyspark==3.5.0",
    "requests>=2.32.4",
]
